Firefox layout is different from other browsers if there are IDEOGRAPHIC SPACE (U+3000)
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | verified |
People
(Reporter: alice0775, Assigned: jfkthame)
References
Details
(Keywords: nightly-community, parity-chrome)
Attachments
(3 files)
Steps to reproduce:
- Open https://www.city.daito.lg.jp/site/covid-19/23963.html
or attached testcase
Actual results:
Firefox layout is different from other browsers
Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4e3362864fbd&tochange=264f0a7a878c
Suspect: Bug 765166
| Reporter | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
I think the primary issue here is that Gecko treats U+3000 like a generic ideographic character, allowing a line-break before or after it, whereas the other browsers only allow a break after it (and not within a sequence of multiple U+3000 characters).
A reduced testcase that shows this, even for single U+3000 characters:
data:text/html;charset=utf-8,<div style="background:yellow;width: 3.5em">%E3%80%87%E3%80%80%E3%80%87%E3%80%80%E3%80%87%E3%80%80%E3%80%87
This renders differently for me in each of Safari, Chrome and Firefox.
There was some discussion related to this in https://github.com/w3c/csswg-drafts/issues/2500.
| Assignee | ||
Comment 3•5 years ago
|
||
This should be superseded by the Unified Segmenter work and migration to a more UAX14-based line-breaker in the fairly near future. Still, I think it's worth applying a simple fix for now in our existing line-break implementation, to improve compatibility here (and it turns out to fix a whole bunch of currently-failing WPT tests).
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 7•5 years ago
|
||
I verified fix in Nightly89.0a1(20210408215439).
Description
•