Bug 1703213 - Disallow soft line break between adjacent IDEOGRAPHIC SPACE characters. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D111065