intl/lwbrk/LineBreaker.cpp
@@ -1014,24 +1014,25 @@ void LineBreaker::GetJISx4051Breaks(const char16_t* aChars, uint32_t aLength,
     uint32_t chLen = ch > 0xFFFFu ? 2 : 1;
     int8_t cl;
 
-    if (NEED_CONTEXTUAL_ANALYSIS(ch)) {
-      char32_t prev, next;
-      if (cur > 0) {
-        // not using state.GetUnicodeCharAt() here because we're looking back
-        // rather than forward for possible surrogates
-        prev = aChars[cur - 1];
-        if (cur > 1 && NS_IS_SURROGATE_PAIR(aChars[cur - 2], prev)) {
-          prev = SURROGATE_TO_UCS4(aChars[cur - 2], prev);
-        }
-      } else {
-        prev = 0;
+    auto prev = [=]() -> char32_t {
+      if (!cur) {
+        return 0;
       }
+      char32_t c = aChars[cur - 1];
+      if (cur > 1 && NS_IS_SURROGATE_PAIR(aChars[cur - 2], c)) {
+        c = SURROGATE_TO_UCS4(aChars[cur - 2], c);
+      }
+      return c;
+    };
+
+    if (NEED_CONTEXTUAL_ANALYSIS(ch)) {
+      char32_t next;
       if (cur + chLen < aLength) {
         next = state.GetUnicodeCharAt(cur + chLen);
       } else {
         next = 0;
       }
-      cl = ContextualAnalysis(prev, ch, next, state, aLevel,
+      cl = ContextualAnalysis(prev(), ch, next, state, aLevel,
                               aIsChineseOrJapanese);
     } else {
       if (ch == U_EQUAL) state.NotifySeenEqualsSign();
@@ -1064,18 +1065,24 @@ void LineBreaker::GetJISx4051Breaks(const char16_t* aChars, uint32_t aLength,
     if (cur > 0) {
       NS_ASSERTION(CLASS_COMPLEX != lastClass || CLASS_COMPLEX != cl,
                    "Loop should have prevented adjacent complex chars here");
-      auto prev = [=]() {
-        char32_t c = aChars[cur - 1];
-        if (cur > 1 && NS_IS_SURROGATE_PAIR(aChars[cur - 2], c)) {
-          c = SURROGATE_TO_UCS4(aChars[cur - 2], c);
-        }
-        return c;
-      };
       allowBreak =
           (state.UseConservativeBreaking() ? GetPairConservative(lastClass, cl)
-                                           : GetPair(lastClass, cl)) &&
-          (aWordBreak != WordBreak::KeepAll ||
-           !SuppressBreakForKeepAll(prev(), ch));
+                                           : GetPair(lastClass, cl));
+      // Special cases where a normally-allowed break is suppressed:
+      if (allowBreak) {
+        // word-break:keep-all suppresses breaks between certain line-break
+        // classes.
+        if (aWordBreak == WordBreak::KeepAll &&
+            SuppressBreakForKeepAll(prev(), ch)) {
+          allowBreak = false;
+        }
+        // We also don't allow a break within a run of U+3000 chars unless
+        // word-break:break-all is in effect.
+        if (ch == 0x3000 && prev() == 0x3000 &&
+            aWordBreak != WordBreak::BreakAll) {
+          allowBreak = false;
+        }
+      }
     }
     aBreakBefore[cur] = allowBreak;
     if (allowBreak) state.NotifyBreakBefore();
